--- a/test/fixtures/cardio_reports.yml
+++ b/test/fixtures/cardio_reports.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: cardio_reports
+#
+#  id               :bigint(8)        not null, primary key
+#  cardio_type      :integer
+#  distance_miles   :float
+#  duration_seconds :integer
+#  finished_at      :datetime
+#  machine          :boolean
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
