--- a/test/fixtures/sleep_reports.yml
+++ b/test/fixtures/sleep_reports.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: sleep_reports
+#
+#  id         :bigint(8)        not null, primary key
+#  asleep_at  :datetime
+#  wakeup_at  :datetime
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
