--- a/test/fixtures/weight_reports.yml
+++ b/test/fixtures/weight_reports.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: weight_reports
+#
+#  id            :bigint(8)        not null, primary key
+#  timestamp     :datetime
+#  weight_pounds :float
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
