--- a/test/fixtures/weight_reports.yml
+++ b/test/fixtures/weight_reports.yml
@@ -3,7 +3,7 @@
 # Table name: weight_reports
 #
 #  id            :bigint(8)        not null, primary key
-#  timestamp     :datetime
+#  datestamp     :date
 #  weight_pounds :float
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
@@ -12,9 +12,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  timestamp: 2019-03-31 11:35:41
+  datestamp: 2019-03-31
   weight_pounds: 175.5
 
 two:
-  timestamp: 2019-03-31 11:35:41
+  datestamp: 2019-03-31
   weight_pounds: 175.5
