--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/.env
+# ----- Custom -----
+
+# Ignore env file
+.env
+
+# Ignore postgres dumps
+*.dump
