--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,18 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/ruby:2.6.1-node-browsers
-
+        environment:
+          RAILS_ENV: test
+          PGHOST: localhost
+          PGUSER: self-metrics
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      - image: circleci/postgres:9.4
+      - image: circleci/postgres:12.1
+        environment:
+          POSTGRES_USER: self-metrics
+          POSTGRES_DB: self_metrics_test
+          POSTGRES_PASSWORD: ""
 
     working_directory: ~/self-metrics
 
