Exclude rspec methods from rubocop BlockLength restriction

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,3 +10,6 @@ Metrics/AbcSize:
 
 Documentation:
   Enabled: false
+
+Metrics/BlockLength:
+  ExcludedMethods: ['feature', 'describe', 'context']
