Add weight reports spec

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,4 +12,4 @@ Documentation:
   Enabled: false
 
 Metrics/BlockLength:
-  ExcludedMethods: ['feature', 'describe', 'context']
+  ExcludedMethods: ['describe', 'context']
