--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/ruby:3.1.2-node-browsers
+      - image: cimg/ruby:3.1.2
         environment:
           RAILS_ENV: test
           PGHOST: localhost
