--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: cimg/ruby:3.1.2
+      - image: cimg/ruby:3.1.2-node
         environment:
           RAILS_ENV: test
           PGHOST: localhost
