--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,8 @@
 default: &default
   adapter: postgresql
+  username: postgres
   password: <%= ENV['POSTGRES_PASSWORD'] %>
+  host: db
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
