--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,17 @@
 default: &default
-  adapter: postgresql
-  username: postgres
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
-  host: db
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: sqlite3
 
 development:
   <<: *default
-  database: self_metrics_development
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: self_metrics_test
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  database: self_metrics_production
+  database: db/production.sqlite3
